--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="icon" type="image/x-icon" href="./images/favicon.png" />
-        <title>Sofilatina Isekai</title>
+        <title>Sofilalatina - Tiếng việt</title>
         <style>
             body {
                 font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
@@ -58,22 +58,21 @@
     <body>
         <div class="container">
             <h1>
+                Từ
                 <span style="color: rgb(255, 64, 64); text-align: center"
-                    >SoFiaLalatina</span
+                    >Sofilalatina</span
                 >
-                Language Fantasy Translator
+                Chuyển Qua Tiếng Việt Và Ngược Lại
             </h1>
             <select id="direction">
-                <option value="toFantasy">Vietnamese to SoFiaLalatina</option>
-                <option value="toVietnamese">
-                    SoFiaLalatina to Vietnamese
-                </option>
+                <option value="toFantasy">Việt Nam sang Sofilalatina</option>
+                <option value="toVietnamese">Sofilalatina sang Việt Nam</option>
             </select>
             <textarea
                 id="inputText"
-                placeholder="Enter text here..."
+                placeholder="Nội dung cần chuyển..."
             ></textarea>
-            <button id="translateButton">Translate</button>
+            <button id="translateButton">Chuyển</button>
             <div id="output"></div>
         </div>
         <script type="module" src="./main.js"></script>
