--- a/index.html
+++ b/index.html
@@ -73,6 +73,12 @@
                 placeholder="Nội dung cần chuyển..."
             ></textarea>
             <button id="translateButton">Chuyển</button>
+            <button
+                style="width: 200px; background-color: rgb(255, 93, 93)"
+                id="speakButton"
+            >
+                Phát Âm Thanh
+            </button>
             <div id="output"></div>
         </div>
         <script type="module" src="./main.js"></script>
